--- a/android/src/main/res/layout/googlepay_button.xml
+++ b/android/src/main/res/layout/googlepay_button.xml
@@ -4,8 +4,8 @@
     android:focusable="true"
     android:layout_width="match_parent"
     android:layout_height="48sp"
-    android:background="@drawable/googlepay_button_background"
-    android:padding="2sp"
+    android:background="@drawable/googlepay_button_no_shadow_background"
+    android:paddingTop="2sp"
     android:contentDescription="@string/googlepay_button_content_description">
     <LinearLayout
         android:duplicateParentState="true"
